--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <!--
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -66,6 +67,13 @@
             <artifactId>jackson-core</artifactId>
             <version>2.5.2</version>
         </dependency>
+        -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -75,8 +83,8 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <plugin>
